# todo-file

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  create_kafka_topics.py  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  settings.py
app/backend/: __init__.py  db.py
app/core/: constants.py  deps.py  exceptions.py  permission_utils.py  permissions.py  security.py
app/migrations/: env.py
app/migrations/versions/: 966261d5a38c_initial.py  b3e9f1a2c4d5_add_uploader_id.py
app/models/: __init__.py  file.py
app/routers/: __init__.py  files.py
app/schemas/: __init__.py  file.py
app/services/: __init__.py  core_client.py  kafka_request_consumer.py  kafka_service.py  s3_service.py
app/tests/: test_health.py
migrations/: README  env.py
migrations/versions/: 001_initial_file_metadata.py
tests/: conftest.py  create_kafka_topics.py  test_kafka_consumer.py
tests/integration/: test_api_files.py  test_kafka_integration.py
tests/unit/: test_deps.py  test_files_router_unit.py  test_kafka_request_consumer.py  test_kafka_service.py  test_main_lifespan.py  test_models.py  test_permissions.py  test_s3_service.py  test_schemas.py  test_security.py
